--- a/basics/basics.css
+++ b/basics/basics.css
@@ -4,3 +4,23 @@
     font-family: 'Montserrat', sans, system-ui;
     font-weight: 500;
 }
+
+#int {
+    color: #333333;
+    font-size: 1rem;
+    font-family: "Fira Code Medium", monospace;
+    font-weight: 300;
+}
+#dec {
+    color: #333333;
+    font-size: 1rem;
+    font-family: "Fira Code Medium", monospace;
+    font-weight: 300;
+}
+
+#str {
+    color: #333333;
+    font-size: 1rem;
+    font-family: "Fira Code Medium", monospace;
+    font-weight: 300;
+}
